--- a/public/css/sstyle.css
+++ b/public/css/sstyle.css
@@ -14,7 +14,7 @@ body {
 /* Header styles*/
 .header {
     padding: 20px;
-    overflow: hidden;
+    overflow: auto;
     border-radius: 40px;
     text-align: left;
     color: white;
@@ -26,8 +26,7 @@ body {
 
 /* Style the top navigation bar */
 .topnav {
-    overflow: hidden;
-    border-radius: 40px;
+    overflow: auto;
     background-color: #21B375;
 }
 
