--- a/public/css/trackerStyle.css
+++ b/public/css/trackerStyle.css
@@ -15,7 +15,7 @@ body {
 /* Header styles*/
 .header {
     padding: 20px;
-    overflow: hidden;
+    overflow: auto;
     border-radius: 40px;
     text-align: left;
     color: white;
@@ -27,8 +27,7 @@ body {
 
 /* Style the top navigation bar */
 .topnav {
-    overflow: hidden;
-    border-radius: 40px;
+    overflow: auto;
     background-color: #21B375;
 }
 
@@ -354,7 +353,7 @@ h2 {
 /* Responsive layout - when the screen is less than 800px wide,
 make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
-    .leftcolumn, .income_list, .expenses__list {
+    .leftcolumn, .rightcolumn, .income_list, .expenses__list {
         width: 100%;
         padding: 0;
     }
